# learn-rust

./: Cargo.toml  README.md
.github/workflows/: test.yml
01-foundations/01-variables/: README.md  hints.md
01-foundations/02-functions/: README.md  hints.md
01-foundations/03-result-option/: Cargo.toml  README.md  hints.md
01-foundations/04-vectors-hashmaps/: README.md  hints.md
01-foundations/05-structs-impl/: Cargo.toml  README.md  hints.md
02-ownership/01-ownership-basics/: Cargo.toml  README.md  hints.md
02-ownership/02-borrowing/: Cargo.toml  README.md  hints.md
02-ownership/03-slices/: Cargo.toml  README.md  hints.md
02-ownership/04-lifetimes/: Cargo.toml  README.md  hints.md
02-ownership/05-smart-pointers/: Cargo.toml  README.md  hints.md
03-enums-traits/01-enums-match/: Cargo.toml  README.md  hints.md
03-enums-traits/02-traits-basics/: Cargo.toml  README.md  hints.md
03-enums-traits/03-trait-objects/: Cargo.toml  README.md  hints.md
03-enums-traits/04-generics/: Cargo.toml  README.md  hints.md
03-enums-traits/05-custom-errors/: Cargo.toml  README.md  hints.md
04-stdlib/01-strings-formatting/: Cargo.toml  README.md  hints.md
04-stdlib/02-file-io/: Cargo.toml  README.md  hints.md
04-stdlib/03-http-client/: Cargo.toml  README.md  hints.md
04-stdlib/04-serde-json/: Cargo.toml  README.md  hints.md
04-stdlib/05-iterators-closures/: Cargo.toml  README.md  hints.md
05-concurrency/01-threads/: Cargo.toml  README.md  hints.md
05-concurrency/02-channels/: Cargo.toml  README.md  hints.md
05-concurrency/03-mutex-arc/: Cargo.toml  README.md  hints.md
05-concurrency/04-scoped-threads/: README.md  hints.md
scripts/: check-all.sh
(+92 files in other folders)
